[package]
name = "jas-min"
version = "0.3.2"
edition = "2021"
authors = ["Kamil Stawiarski <kamil@ora-600.pl>", "Radosław Kut <radek@ora-600.pl>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.14.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
execute = "0.2.11"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
base64 = "0.21.0"
clap = { version = "3.0", features = ["derive"] }
plotly = "0.8.4"
regex = "1.7.1"
ndarray = "0.16"
ndarray-stats = "0.6.0"
colored = "2.1.0"
open = "5"
