[package]
name = "jas-min"
version = "0.4.0"
edition = "2021"
authors = ["Kamil Stawiarski <kamil@ora-600.pl>", "Radoslaw Kut <radek@ora-600.pl>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.23.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
execute = "0.2.11"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
base64 = "0.21.0"
clap = { version = "4.5.31", features = ["derive"] }
plotly = "0.12.1"
regex = "1.11.1"
ndarray = "0.16"
ndarray-stats = "0.6.0"
colored = "3.0.0"
open = "5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
