[package]
name = "jas-min"
version = "0.8.0"
edition = "2021"
authors = ["Kamil Stawiarski <kamil@ora-600.pl>", "Radoslaw Kut <radek@ora-600.pl>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.23.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
execute = "0.2.11"
clap = { version = "4.5.31", features = ["derive"] }
plotly = { version = "0.13.5"}
regex = "1.11.1"
ndarray = "0.16"
ndarray-stats = "0.6.0"
noisy_float = "0.2"
colored = "3.0.0"
open = "5"
reqwest = { version = "0.11", features = ["json","multipart"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
dotenvy = "0.15.7"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1"
async-trait = "0.1"
prettytable = "0.10.0"
rayon = "1.10.0"
indicatif = "0.17.11"
pulldown-cmark = "0.13.0"
html-escape = "0.2.13"
dashmap = "6.1.0"
base64 ="0.22.1"
toon = "0.1.0"
nalgebra = "0.34.1"